# gmock_demo_cpp

./: .clang-format  CMakeLists.txt  README.md  main.cpp
Module/: ImplementationDisplay.cpp  ImplementationDisplay.h  InterfaceDisplay.h
Test/Module/: MockInterfaceDisplay.h  TestFixtureIDisplay.cpp  TestFixtureIDisplay.h
